# object_pose

./: .gitignore  .gitmodules  LICENSE  README.md  cam_calib_config.yaml.example  config.py  depth.py  detect.py  pyproject.toml  sim_config.yaml.example  viewer.py  web_server.py
cam_calib_old/: cam_calib_real.py  camera_config.yaml  camera_realsense.py  collect_data.py  configure_cam.py  depth_model.py  poses.yaml  scene.xml  test_obj.xml
camera/: __init__.py  network.py  realsense.py  video.py
camera_client/: README.md  server.py
controllers/: __init__.py  base.py  configs.py  configs.yaml.example  ee_pose.py  gravcomp.py  idle.py  joint_pd.py
depth/: __init__.py  mesh.py  runner.py
depth/backends/: __init__.py  base.py  camera.py  foundation_stereo.py  hf_pipeline.py  metric3d.py  moge.py  unidepth.py
hardware/: __init__.py  kinova.py  log_relay.py  osc.py  transport.py
policies/: __init__.py  base.py  configs.py  configs.yaml.example  nn_policy.py  open_drawer.py
robot/: __init__.py  scene.py  sources.py  state.py  wire.py
robot/mjcf/: gen3_gripper.xml  scene.xml
scripts/: start.sh  start_no_robot.sh  stop.sh
segment/: __init__.py  backends.py  runner.py
sim/: __init__.py  calib_patch.py  camera.py  runner.py
test/: README.md  test_open_drawer_osc.py  test_realsense.py
viewer/: __init__.py  server.py
vision/: __init__.py  object_pose.py
web/: README.md  index.html  package-lock.json  package.json  tsconfig.json
web/src/: App.tsx  CamCalibPanel.tsx  HardwareStatusPanel.tsx  JointPdPanel.tsx  JointTargetsPanel.tsx  RobotRenderer.ts  Viewer.tsx  main.tsx  protocol.ts  useStream.ts
web/src/tabs/: DiagnosticsTab.tsx  PolicyTab.tsx  RobotTab.tsx  VisionTab.tsx
web/src/ui/: Card.tsx  LogViewer.tsx  StatusBar.tsx  StatusPills.tsx  TabStrip.tsx  theme.css  usePersistentLayout.ts
wire/: __init__.py  frames.py
