[project]
name = "object-pose"
version = "0.1.0"
description = "Live RGB + monocular metric depth + 3D point cloud viewer (RealSense + Depth-Anything-V2)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Sudhir Pratap Yadav", email = "sudhirpratapyadav@gmail.com" },
]
dependencies = [
    "numpy>=1.26",
    "pillow>=10.0",
    "pyrealsense2>=2.55",
    "viser>=0.2",
    "torch>=2.1",
    "transformers>=4.40",
    "huggingface-hub>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
