[project]
name = "object-pose"
version = "0.1.0"
description = "Live RGB + monocular metric depth + 3D point cloud viewer (RealSense + Depth-Anything-V2 / DepthPro / UniDepth / Metric3D)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Sudhir Pratap Yadav", email = "sudhirpratapyadav@gmail.com" },
]
dependencies = [
    "numpy>=1.26",
    "pillow>=10.0",
    "pyrealsense2>=2.55",
    "viser>=0.2",
    "torch>=2.1",
    "torchvision>=0.16",
    "transformers>=4.40",
    "huggingface-hub>=0.23",
    "tqdm>=4.65",
    "opencv-python>=4.8",
    "websockets>=12",
]

[project.optional-dependencies]
# Both heavy backends are loaded at runtime and have problematic build deps;
# install them manually if you want to enable those entries:
#   UniDepth V2:
#     uv pip install --no-build-isolation \
#       "unidepth @ git+https://github.com/lpiccinelli-eth/UniDepth.git"
#   Metric3D V2 (torch.hub, may also need mmcv depending on the variant):
#     uv pip install timm
extras = ["timm>=0.9"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["camera", "depth", "viewer"]
