[project]
name = "object-pose"
version = "0.1.0"
description = "Live RGB + monocular metric depth + 3D point cloud viewer (RealSense + Depth-Anything-V2 / DepthPro / UniDepth / Metric3D)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Sudhir Pratap Yadav", email = "sudhirpratapyadav@gmail.com" },
]
dependencies = [
    "numpy>=1.26",
    "pillow>=10.0",
    "pyrealsense2>=2.55",
    "mujoco>=3.2",
    "torch>=2.1",
    "torchvision>=0.16",
    "transformers>=4.40",
    "huggingface-hub>=0.23",
    "tqdm>=4.65",
    "opencv-python>=4.8",
    "websockets>=12",
    "pyyaml>=6.0",
    "pin>=3.9",            # Pinocchio (rigid-body dynamics, used by hardware/osc.py)
]

[project.optional-dependencies]
# Heavy backends are loaded at runtime and have problematic build deps;
# install them manually if you want to enable those entries:
#   MoGe / MoGe-2:
#     uv pip install --no-build-isolation \
#       "moge @ git+https://github.com/microsoft/MoGe.git"
#   UniDepth V2:
#     uv pip install --no-build-isolation \
#       "unidepth @ git+https://github.com/lpiccinelli-eth/UniDepth.git"
#   Metric3D V2 (torch.hub, may also need mmcv depending on the variant):
#     uv pip install timm
#
# Kinova hardware (real-robot mode only). kortex_api isn't on PyPI; the
# wheel Kinova ships is bundled in wheels/. On Python 3.13 you also need
# to pin protobuf (the wheel's metadata allows 3.5.1 which breaks).
#     uv pip install ./wheels/kortex_api-2.6.0.post3-py3-none-any.whl
#     uv pip install "protobuf==3.20.0"
extras = ["timm>=0.9"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# mmcv's setup.py imports pkg_resources without declaring setuptools as a
# build dependency.
[tool.uv.extra-build-dependencies]
mmcv = ["setuptools", "wheel"]

[tool.hatch.build.targets.wheel]
packages = ["camera", "depth", "segment", "robot", "hardware", "wire", "sim",
            "controllers", "policies", "vision"]
